--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -1,7 +1,16 @@
 security:
+    encoders:
+        App\Entity\User:
+            algorithm: bcrypt
+            cost: 12
+    
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
+        db_provider:
+            entity:
+                class: App\Entity\User
+                property: username
+                
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
