--- a/api/.env
+++ b/api/.env
@@ -20,7 +20,7 @@ VARNISH_URL=http://cache-proxy
 APP_ENV=dev
 APP_SECRET=!ChangeMe!
 TRUSTED_PROXIES=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
-TRUSTED_HOSTS='^localhost|api$'
+TRUSTED_HOSTS='^localhost|api|(.*)\.ngrok\.io$'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -31,7 +31,8 @@ DATABASE_URL=postgres://api-platform:!ChangeMe!@db/api
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+#CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+CORS_ALLOW_ORIGIN=^https?://(.*)\.ngrok\.io?$
 ###< nelmio/cors-bundle ###
 
 ###> symfony/mercure-bundle ###
