--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -8,7 +8,7 @@ parameters:
 api_platform:
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
-    title: Share & Rate Songs
+    title: Discoveryfy
     # Allow using plain IDs for JSON format
     allow_plain_identifiers: true
     version: 1.0.0
