--- a/client-quasar/package.json
+++ b/client-quasar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Discoveryfy client",
+  "name": "discoveryfy-client",
   "version": "0.0.1",
   "description": "Tiny WebApp for Share & Rate Songs in Spotify",
   "productName": "Discoveryfy",
@@ -15,14 +15,14 @@
     "upgrade-interactive": "npm-check --update"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "quasar": "^1.0.0",
-    "vue-i18n": "^8.0.0"
+    "@quasar/extras": "^1.3.2",
+    "quasar": "^1.1.6",
+    "vue-i18n": "^8.14.1"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0",
+    "@quasar/app": "^1.1.2",
     "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "eslint": "^5.10.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^5.0.0",
