--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -24,3 +24,9 @@ api_platform:
     # Mercure integration, remove if unwanted
     mercure:
         hub_url: '%env(MERCURE_SUBSCRIBE_URL)%'
+    # Login through JWT
+    swagger:
+        api_keys:
+            apiKey:
+                name: Authorization
+                type: header
