--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -1,22 +1,46 @@
 security:
     encoders:
         App\Entity\User:
-            algorithm: bcrypt
-            cost: 12
+            # Changed for JWT
+            algorithm: argon2i
+#            algorithm: bcrypt
+#            cost: 12
     
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
+        # used to reload user from session & other features (e.g. switch_user)
         db_provider:
             entity:
                 class: App\Entity\User
-                property: username
+                property: email
                 
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
+        api:
+            pattern: ^/api/
+            stateless: true
             anonymous: true
+            provider: db_provider
+            guard:
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
+
+        main: # Or maybe better call it login?
+            anonymous: true
+            # Added for JWT login
+            stateless: true
+            provider: db_provider
+            json_login:
+                check_path: /login
+                username_path: email
+                password_path: password
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+            guard:
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -29,3 +53,9 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login,          roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/memberships,    roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/users,          roles: IS_AUTHENTICATED_FULLY }
+
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
