--- a/api/config/routes.yaml
+++ b/api/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+authentication_token:
+    path: /login
+    methods: ['POST']
