--- a/client-quasar/package.json
+++ b/client-quasar/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.3.2",
+    "axios": "^0.19.0",
     "quasar": "^1.1.6",
     "vue-i18n": "^8.14.1"
   },
