--- a/client-quasar/package.json
+++ b/client-quasar/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@quasar/extras": "^1.3.2",
     "axios": "^0.19.0",
+    "lodash": "^4.17.15",
     "quasar": "^1.1.6",
     "vue-i18n": "^8.14.1"
   },
