--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -1,32 +1,36 @@
-parameters:
+#parameters:
     # Adds a fallback VARNISH_URL if the env var is not set.
     # This allows you to run cache:warmup even if your
     # environment variables are not available yet.
     # You should not need to change this value.
-    env(VARNISH_URL): ''
+#    env(VARNISH_URL): ''
 
 api_platform:
+    title: Discoveryfy
+    version: 1.0.0
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
-    title: Discoveryfy
-    # Allow using plain IDs for JSON format
-    allow_plain_identifiers: true
-    version: 1.0.0
-    # Varnish integration, remove if unwanted
-    http_cache:
-        invalidation:
-            enabled: true
-            varnish_urls: ['%env(VARNISH_URL)%']
-        max_age: 0
-        shared_max_age: 3600
-        vary: ['Content-Type', 'Authorization']
-        public: true
-    # Mercure integration, remove if unwanted
-    mercure:
-        hub_url: '%env(MERCURE_SUBSCRIBE_URL)%'
-    # Login through JWT
+    patch_formats:
+        json: ['application/merge-patch+json']
     swagger:
+        versions: [3]
+        # Login through JWT
         api_keys:
             apiKey:
                 name: Authorization
                 type: header
+    # Allow using plain IDs for JSON format
+    allow_plain_identifiers: true
+    # Varnish integration, remove if unwanted
+#    http_cache:
+#        invalidation:
+#            enabled: true
+#            varnish_urls: ['%env(VARNISH_URL)%']
+#        max_age: 0
+#        shared_max_age: 3600
+#        vary: ['Content-Type', 'Authorization']
+#        public: true
+#    # Mercure integration, remove if unwanted
+#    mercure:
+#        hub_url: '%env(MERCURE_SUBSCRIBE_URL)%'
+#    # Login through JWT
