--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -12,6 +12,8 @@ api_platform:
         paths: ['%kernel.project_dir%/src/Entity']
     patch_formats:
         json: ['application/merge-patch+json']
+    eager_loading:
+        force_eager: false
     swagger:
         versions: [3]
         # Login through JWT
