--- a/api/config/packages/framework.yaml
+++ b/api/config/packages/framework.yaml
@@ -6,11 +6,16 @@ framework:
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
-        handler_id: null
         cookie_secure: auto
         cookie_samesite: lax
+        # NULL =  means that PHP's default session mechanism is used
+        handler_id: null
+        # Save session to database: https://symfony.com/doc/4.4/doctrine/pdo_session_storage.html
+#        handler_id: Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
 
     #esi: true
     #fragments: true
     php_errors:
         log: true
+
+#    serializer: { enable_annotations: true }
